tests/errors/nested_function_default_return.dang
# Default values for nested function arguments must not inherit the enclosing return target.
outer: Int! {
  let inner(x: Int! = return 1): Int! {
    x
  }
  0
}
